fixed: OC: dn widget not showing email checkbox if linked question has appearance no-buttons (or similar), closes #237

--- a/widget/discrepancy-note/dn-widget.scss
+++ b/widget/discrepancy-note/dn-widget.scss
@@ -651,6 +651,15 @@ $dn-default-color: #575756;
 
 }
 
+// Fight no-buttons appearance of linked question so Email checkbox is always visible.
+.question.or-appearance-columns-pack.or-appearance-no-buttons .or-comment-widget .option-wrapper>label input {
+    top: 0;
+    left: 0;
+    width: 20px;
+    height: 20px;
+    z-index: auto;
+}
+
 .dn-tooltip-visible {
     @include font-normal;
     padding: 2px 8px;
